--- a/.env
+++ b/.env
@@ -4,10 +4,4 @@ server_port = 1111
 api_username = 'lobanov'
 api_password = 'ivan'
 
-#80.87.194.192 порт 15432
-#db service
-#username postgres
-#pass 1qazxsw2
-
-
-database_url = 'url'
+database_url = 'postgresql://postgres:1qazxsw2@80.87.194.192:15432/service'
